<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item android:id="@+id/menu_dept"
        android:title="@string/department">

        <menu>

                <item android:id="@+id/menu_notes"
                    android:title="@string/notes" />

                <item android:id="@+id/menu_notice"
                    android:title="@string/notice"/>

                <item android:id="@+id/menu_qna"
                    android:title="@string/qna"/>

                <item android:id="@+id/menu_info"
                    android:title="@string/student_info"/>

        </menu>

    </item>


        <item android:id="@+id/menu_attendence"
            android:title="@string/attendence"/>

        <item android:id="@+id/menu_library"
            android:title="@string/library"/>



</menu>